# Raphy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: routes.py  websocket.py
backend/core/: audio.py  hotkey.py  llm.py  stt.py  tts.py  voice.py
backend/memory/: brain.py  profile.py  vector.py
backend/personality/: prompts.py
frontend/: assistant.html  chat.html  index.html
frontend/css/: assistant.css  chat.css  orb.css  settings.css  style.css
frontend/js/: app.js  assistant.js  chat.js  orb.js  settings.js  websocket.js
profiles/: p1-quality.env  p2-speed.env
scripts/: download_models.sh  index_knowledge.py  install.sh  profile.sh  start.sh
