[project]
name = "raphael"
version = "0.1.0"
description = "Raphael - A personal AI assistant inspired by the Great Sage"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "xian" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
    "openwakeword>=0.6.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "pynput>=1.7.6",
]

memory = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]

tools = [
    "duckduckgo-search>=6.0.0",
    "psutil>=6.0.0",
]

system = [
    "pillow>=11.0.0",
    "pytesseract>=0.3.10",
]

all = [
    "raphael[voice,memory,tools,system]",
]

[project.scripts]
raphael = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
